# cloudpathlib

./: .coverage  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  Makefile  README.md  Untitled.ipynb  acl.py  permissions.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  test-open.py  test.py  versions.json
.github/: codecov.yml  failed_build_issue_template.md  pull_request_template.md
0.17.0/: 404.html  index.html  objects.inv  sitemap.xml
cloudpathlib/: __init__.py  _vendored.py  anypath.py  cache_utils.py  client.py  cloud_io.py  cloudpath.py  cloudpath_info.py  cloudshutil.py  decorators.py  enums.py  exceptions.py  glob_utils.py  opminization-log.txt  patches.py  typing.py
cloudpathlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: example.ipynb  make_support_table.py  mkdocs.yml  pytest.ini
requirements/: azure.txt  base.txt
stable/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  http_fixtures.py  test_anypath.py  test_az.py  test_azure_specific.py  test_caching.py  test_client.py  test_cloud_io.py  test_cloudpath.py  test_cloudpath_file_io.py  test_cloudpath_implementations.py  test_cloudpath_instantiation.py  test_cloudpath_internal.py  test_cloudpath_manipulation.py  test_cloudpath_serialize.py  test_cloudpath_upload_copy.py  test_glob_utils.py  test_gs_specific.py  test_http.py  test_import_time.py  test_integrations.py  test_local.py  test_pandas_accessor.py  test_patching.py  test_s3.py  test_s3_specific.py  utils.py
v0.1/: 404.html  index.html  sitemap.xml
v0.10/: 404.html  index.html  sitemap.xml
v0.11/: 404.html  index.html  sitemap.xml
v0.12/: 404.html  index.html  sitemap.xml
v0.13/: 404.html  index.html  objects.inv  sitemap.xml
v0.14/: 404.html  index.html  sitemap.xml
v0.15/: 404.html  index.html  objects.inv  sitemap.xml
v0.16/: index.html  sitemap.xml
v0.17/: 404.html  index.html  sitemap.xml
v0.18/: index.html
v0.19/: index.html  objects.inv  sitemap.xml
v0.2/: 404.html  index.html  (+1 more)
(+702 files in other folders)
