[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cloudpathlib"
version = "0.16.0"
description = "pathlib-style classes for cloud storage services."
readme = "README.md"
authors = [{ name = "DrivenData", email = "info@drivendata.org" }]
license = { file = "LICENSE" }
keywords = [
  "pathlib",
  "cloud storage",
  "s3",
  "azure blob storage",
  "google cloud storage",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
  "importlib_metadata ; python_version < '3.8'",
  "typing_extensions>4 ; python_version < '3.11'",
]

[project.optional-dependencies]
azure = ["azure-storage-blob>=12"]
gs = ["google-cloud-storage"]
s3 = ["boto3"]
all = ["cloudpathlib[azure]", "cloudpathlib[gs]", "cloudpathlib[s3]"]


[project.urls]
"Repository" = "https://github.com/drivendataorg/cloudpathlib"
"Documentation" = "https://cloudpathlib.drivendata.org/"
"Bug Tracker" = "https://github.com/drivendataorg/cloudpathlib/issues"
"Changelog" = "https://cloudpathlib.drivendata.org/stable/changelog/"


[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$|\.ipynb$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.ipynb_checkpoints
  | docs/docs/script
)/
'''

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cloudpathlib --cov-report=term --cov-report=html --cov-report=xml -n=auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cloudpathlib"]
